# py-redis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
conf/: config.py  enums.py
predis/: resolver.py  runner.py
predis/strings/: resolve.py
predis/sync_runner/: runner.py
redis/sync_runner/: runner.py
