[tool.poetry]
name = "python-redis"
version = "0.1.0"
description = ""
authors = ["rishavvajpayee <reshavvajpayee@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
python-dotenv = "^1.0.1"
pre-commit = "^3.6.1"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
